<resources>
    <string name="app_name">MovieCatalogue5</string>

    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="change_language">Change Language</string>
    <string name="title">title</string>
    <string name="movie_description">Movie Description</string>
    <string name="poster_movie">Poster Movie</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release Date</string>
    <string name="popularity">Popularity</string>
    <string name="language">Language</string>
    <string name="overview">Overview</string>
    <string name="value">-</string>
    <string name="backdrop_movie">backdrop movie</string>
    <string name="details">Details</string>

    <string name="favorite">Favorite</string>
    <string name="add_favorite">Added to favorite</string>
    <string name="fail_favorite">Failed to add to favorite</string>
    <string name="remove_favorite">Removed from favorite</string>
    <string name="fail_remove">Failed to remove from favorite</string>
    <string name="search">Search</string>
    <string name="empty_text">No Data</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="title_activity_set_reminder">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
